// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem component displays a grid item with an image 1`] = `
<div
  className="span--1--of--4"
>
  <img
    alt="Example image"
    className="span--1--of--4__media__img"
    src="An example image link"
  />
  <div
    className="span--1--of--4__media__body"
  >
    <h3>
      Test grid item 2
    </h3>
    <p>
      A grid item with an image
    </p>
  </div>
</div>
`;

exports[`GridItem component displays a grid item without an image 1`] = `
<div
  className="span--1--of--4"
>
  <div
    className="span--1--of--4__body"
  >
    <h3>
      Test grid item 1
    </h3>
    <p>
      A grid item without an image
    </p>
  </div>
</div>
`;
